Update css font

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+ body {
   background-image: url(https://img.freepik.com/free-vector/blurred-valentine-s-day-wallpaper_23-2148819570.jpg);
   background-size: cover;
   height: 100vh;
@@ -10,6 +10,7 @@ body {
 h1 {
   color: #ff8080;
   font-size: 40px;
+  font-family: "Courier New", Courier, monospace;
   animation: float 1s ease-in-out infinite alternate;
 }
 
@@ -45,7 +46,7 @@ h1 {
 p {
   font-size: 20px;
   margin: 30px;
-  text-shadow: 2px 2px #c0c0c0;
+  font-family: "Courier New", Courier, monospace;
 }
 
 .image-slider {
@@ -63,3 +64,4 @@ p {
   top: 0;
   left: 0;
   transition: left 1s ease-in-out;
+}
