--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
  body {
-  background-image: url(https://img.freepik.com/free-vector/blurred-valentine-s-day-wallpaper_23-2148819570.jpg);
+  background-image: url(gb.jpg);
   background-size: cover;
   height: 100vh;
   display: flex;
