--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
   align-items: center;
 }
 
+
 h1 {
   color: #ff8080;
   font-size: 40px;
@@ -51,7 +52,7 @@ p {
 
 .image-slider {
   width: 600px;
-  height: 400px;
+  min-height: 400px;
   overflow: hidden;
   margin-top: 30px;
   position: relative;
