--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
- body {
+body {
   background-image: url(gb.jpg);
   background-size: cover;
   height: 100vh;
@@ -7,10 +7,9 @@
   align-items: center;
 }
 
-
 h1 {
   color: #ff8080;
-  font-size: 40px;
+  font-size: 5vw;
   font-family: "Courier New", Courier, monospace;
   animation: float 1s ease-in-out infinite alternate;
 }
@@ -33,6 +32,8 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 80vw;
+  height: 80vh;
 }
 
 @keyframes zoomIn {
@@ -45,14 +46,14 @@ h1 {
 }
 
 p {
-  font-size: 20px;
+  font-size: 3vw;
   margin: 30px;
   font-family: "Courier New", Courier, monospace;
 }
 
 .image-slider {
-  width: 600px;
-  min-height: 400px;
+  width: 80vw;
+  min-height: 50vh;
   overflow: hidden;
   margin-top: 30px;
   position: relative;
